crates/jot-tui/tests/snapshots/render__a_wide_frame_puts_a_reader_beside_the_list.snap
---
source: crates/jot-tui/tests/render.rs
expression: frame
---
┌ Sep 2026 ──────────┐┌ timeline — every note ───────────────┐┌ id---------------------------------- ──────────┐
│Mo Tu We Th Fr Sa Su││   id-----------  the note in …  [age]││# the note in focus                             │
│    1  2  3  4  5  6││   id-----------  older          [age]││                                                │
│                    ││                                      ││the body of the focused note                    │
│ 7  8  9 10 11 12 13││                                      ││                                                │
│                    ││                                      ││                                                │
│14 15 16 17 18 19 20││                                      ││                                                │
│                    ││                                      ││                                                │
│21 22 23 24 25 26 27││                                      ││                                                │
│                    ││                                      ││                                                │
└────────────────────┘└──────────────────────────────────────┘└────────────────────────────────────────────────┘
 1/2  Space  n  r  q  e  x  ·  Tab  f  [  ]  t  /  ·  ?  q
