crates/jot-tui/tests/snapshots/render__an_empty_list_leaves_the_reader_saying_so_rather_than_blank.snap
---
source: crates/jot-tui/tests/render.rs
expression: frame
---
┌ Sep 2026 ──────────┐┌ timeline — every note ───────────────┐┌ reader ────────────────────────────────────────┐
│Mo Tu We Th Fr Sa Su││                                      ││                                                │
│    1  2  3  4  5  6││  Nothing here yet. Press n to write t││  Nothing selected.                             │
│                    ││                                      ││                                                │
│ 7  8  9 10 11 12 13││                                      ││                                                │
│                    ││                                      ││                                                │
│14 15 16 17 18 19 20││                                      ││                                                │
│                    ││                                      ││                                                │
│21 22 23 24 25 26 27││                                      ││                                                │
│                    ││                                      ││                                                │
└────────────────────┘└──────────────────────────────────────┘└────────────────────────────────────────────────┘
  Space  n  e  x  ·  Tab  f  [  ]  t  /  ·  ?  q
