crates/jot-tui/tests/snapshots/render__an_empty_vault_says_so_rather_than_painting_a_blank_frame.snap
---
source: crates/jot-tui/tests/render.rs
expression: render(&mut app)
---
┌ Sep 2026 ──────────┐┌ timeline — every note ─────────────────────────┐
│Mo Tu We Th Fr Sa Su││                                                │
│    1  2  3  4  5  6││  Nothing here yet. Press n to write the first n│
│                    ││                                                │
│ 7  8  9 10 11 12 13││                                                │
│                    ││                                                │
│14 15 16 17 18 19 20││                                                │
│                    ││                                                │
│21 22 23 24 25 26 27││                                                │
│                    ││                                                │
└────────────────────┘└────────────────────────────────────────────────┘
  Space  n  e  x  ·  Tab  f  [  ]  /  ·  ?  q
