crates/jot-tui/tests/snapshots/render__eighty_columns_carries_the_sidebar_and_the_list_and_no_reader.snap
---
source: crates/jot-tui/tests/render.rs
expression: frame
---
┌ Sep 2026 ──────────┐┌ timeline — every note ─────────────────────────────────┐
│Mo Tu We Th Fr Sa Su││   id-----------  the note in focus  [age]              │
│    1  2  3  4  5  6││   id-----------  older              [age]              │
│                    ││                                                        │
│ 7  8  9 10 11 12 13││                                                        │
│                    ││                                                        │
│14 15 16 17 18 19 20││                                                        │
│                    ││                                                        │
│21 22 23 24 25 26 27││                                                        │
│                    ││                                                        │
│28 29 30            ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
 1/2  Space  n  r  q  e  x  ·  Tab  f  [  ]  /  ·  ?  q
