crates/jot-tui/tests/snapshots/render__the_files_view_names_its_sort_order.snap
---
source: crates/jot-tui/tests/render.rs
expression: render(&mut app)
---
┌ Sep 2026 ──────────┐┌ files — sort: oldest ──────────────────────────┐
│Mo Tu We Th Fr Sa Su││   id-----------  b note  [age]                 │
│    1  2  3  4  5  6││   id-----------  a note  [age]                 │
│                    ││                                                │
│ 7  8  9 10 11 12 13││                                                │
│                    ││                                                │
│14 15 16 17 18 19 20││                                                │
│                    ││                                                │
│21 22 23 24 25 26 27││                                                │
│                    ││                                                │
└────────────────────┘└────────────────────────────────────────────────┘
 sort: oldest
