crates/jot-tui/tests/snapshots/render__the_marker_distinguishes_a_reply_from_a_note_on_its_own.snap
---
source: crates/jot-tui/tests/render.rs
expression: frame
---
┌ Sep 2026 ──────────┐┌ timeline — every note ───────────────┐┌ id---------------------------------- ──────────┐
│Mo Tu We Th Fr Sa Su││ ❯ id-----------  a quoter  [age]     ││# a quoter                                      │
│    1  2  3  4  5  6││↳  id-----------  a reply   [age]     ││                                                │
│                    ││⚑  id-----------  the head  [age]     ││body                                            │
│ 7  8  9 10 11 12 13││                                      ││                                                │
│                    ││                                      ││                                                │
│14 15 16 17 18 19 20││                                      ││                                                │
│                    ││                                      ││                                                │
│21 22 23 24 25 26 27││                                      ││                                                │
│                    ││                                      ││                                                │
└────────────────────┘└──────────────────────────────────────┘└────────────────────────────────────────────────┘
 1/3  Space  n  r  q  e  x  ·  Tab  f  [  ]  t  /  ·  ?  q
