crates/jot-tui/tests/snapshots/render__the_search_view_shows_the_query_in_its_header.snap
---
source: crates/jot-tui/tests/render.rs
expression: render(&mut app)
---
┌ Sep 2026 ──────────┐┌ search: alpha▏─────────────────────────────────┐
│Mo Tu We Th Fr Sa Su││   id-----------  alphabet  [age]               │
│    1  2  3  4  5  6││   id-----------  alpha     [age]               │
│                    ││                                                │
│ 7  8  9 10 11 12 13││                                                │
│                    ││                                                │
│14 15 16 17 18 19 20││                                                │
│                    ││                                                │
│21 22 23 24 25 26 27││                                                │
│                    ││                                                │
└────────────────────┘└────────────────────────────────────────────────┘
 typing — Enter to accept, Tab or Esc to leave
